# stackvox

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  NOTICE  README.md  SECURITY.md  pyproject.toml  release-please-config.json  voice_demo.py
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: check-kokoro-model.yml  ci.yml  release-please.yml  semantic-pull-request.yml
docs/: speech-normalization.md
examples/: README.md  basic.py
stackvox/: __init__.py  __main__.py  cli.py  config.py  daemon.py  engine.py  paths.py  text.py  updates.py
stackvox/data/: stackvox-say
tests/: test_cli.py  test_config.py  test_daemon.py  test_daemon_protocol.py  test_engine.py  test_paths.py  test_text.py  test_updates.py
