[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "stackvox"
version = "0.3.0"
description = "Offline TTS library using Kokoro-82M"
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
license-files = ["LICENSE", "NOTICE"]
authors = [{ name = "StackOne Technologies Ltd.", email = "support@stackone.com" }]
keywords = ["tts", "kokoro", "onnx", "offline", "speech"]
classifiers = [
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
]
dependencies = [
    "kokoro-onnx>=0.4.0",
    "soundfile>=0.12.1",
    "sounddevice>=0.4.6",
    "numpy>=1.24",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-mock>=3.12",
    "pytest-cov>=5.0",
    "ruff>=0.5",
    "pre-commit>=3.7",
    "commitizen>=3.27",
    "mypy>=1.11",
]

[project.urls]
Homepage = "https://github.com/StackOneHQ/stackvox"
Repository = "https://github.com/StackOneHQ/stackvox"
Issues = "https://github.com/StackOneHQ/stackvox/issues"

[project.scripts]
stackvox = "stackvox.cli:main"

[tool.setuptools]
script-files = ["bin/stackvox-say"]

[tool.setuptools.packages.find]
include = ["stackvox*"]

[tool.setuptools.package-data]
# Ship the PEP 561 marker so downstream type checkers trust our inline hints.
stackvox = ["py.typed"]

[tool.ruff]
line-length = 110
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # bugbear
    "UP",  # pyupgrade
    "SIM", # simplify
]
ignore = [
    "E501", # line length handled by formatter
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B011"] # allow bare asserts in tests

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"

[tool.coverage.run]
source = ["stackvox"]
branch = true
omit = [
    "stackvox/__main__.py",
]

[tool.coverage.report]
exclude_also = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
show_missing = true
skip_covered = false

[tool.mypy]
python_version = "3.10"
files = ["stackvox", "tests"]
warn_unused_ignores = true
warn_redundant_casts = true
warn_return_any = true
check_untyped_defs = true
no_implicit_optional = true

[[tool.mypy.overrides]]
# Third-party deps without inline type stubs.
module = ["kokoro_onnx", "sounddevice", "soundfile"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
# Tests use pytest-mock's mocker.patch which returns Any-heavy values; don't
# require full strictness there.
module = "tests.*"
disallow_untyped_defs = false

[tool.commitizen]
# We use commitizen only for commit-message validation (commit-msg hook and
# CI `cz check`). Version bumps and CHANGELOG maintenance are handled by
# release-please — do NOT run `cz bump` on this repo.
name = "cz_conventional_commits"
version_provider = "pep621"
tag_format = "v$version"
