[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "stackvox"
version = "0.3.1"
description = "Offline TTS library using Kokoro-82M"
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
license-files = ["LICENSE", "NOTICE"]
authors = [{ name = "StackOne Technologies Ltd.", email = "support@stackone.com" }]
keywords = ["tts", "kokoro", "onnx", "offline", "speech"]
classifiers = [
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
]
dependencies = [
    "kokoro-onnx>=0.4.0",
    "soundfile>=0.12.1",
    "sounddevice>=0.4.6",
    "numpy>=1.24",
    "tomli>=2.0;python_version<'3.11'",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-mock>=3.12",
    "pytest-cov>=5.0",
    "ruff>=0.5",
    "pre-commit>=3.7",
    "commitizen>=3.27",
    "mypy>=1.11",
]

[project.urls]
Homepage = "https://github.com/StackOneHQ/stackvox"
Repository = "https://github.com/StackOneHQ/stackvox"
Issues = "https://github.com/StackOneHQ/stackvox/issues"

[project.scripts]
stackvox = "stackvox.cli:main"

[tool.setuptools.packages.find]
include = ["stackvox*"]

[tool.setuptools.package-data]
# Ship the PEP 561 marker so downstream type checkers trust our inline hints,
# and the bash helper as package data — extracted onto PATH by
# `stackvox install-helper`. (We deliberately don't use [tool.setuptools]
# script-files = [...]: it's discouraged, has no PEP 621 equivalent, and
# doesn't round-trip through hatchling/uv if we ever migrate build backends.)
stackvox = ["py.typed", "data/stackvox-say"]

[tool.ruff]
line-length = 110
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # bugbear
    "UP",  # pyupgrade
    "SIM", # simplify
]
ignore = [
    "E501", # line length handled by formatter
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B011"] # allow bare asserts in tests

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"

[tool.coverage.run]
source = ["stackvox"]
branch = true
omit = [
    "stackvox/__main__.py",
]

[tool.coverage.report]
exclude_also = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
show_missing = true
skip_covered = false

[tool.mypy]
python_version = "3.10"
files = ["stackvox", "tests"]
warn_unused_ignores = true
warn_redundant_casts = true
warn_return_any = true
check_untyped_defs = true
no_implicit_optional = true
disallow_untyped_defs = true

[[tool.mypy.overrides]]
# Third-party deps without inline type stubs (or, for `tomli`, a 3.10-only
# fallback that's not installed on the typechecker's Python).
module = ["kokoro_onnx", "sounddevice", "soundfile", "tomli"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
# Tests rely on pytest-mock's `mocker` (Any-heavy) and pytest fixtures with
# implicit Any-typed kwargs. Strict untyped-def bans buy little here, so
# tests stay on the looser config.
module = "tests.*"
disallow_untyped_defs = false

[tool.commitizen]
# We use commitizen only for commit-message validation (commit-msg hook and
# CI `cz check`). Version bumps and CHANGELOG maintenance are handled by
# release-please — do NOT run `cz bump` on this repo.
name = "cz_conventional_commits"
version_provider = "pep621"
tag_format = "v$version"
